--- a/views/game.ejs
+++ b/views/game.ejs
@@ -27,12 +27,28 @@
     <div class="text-center mt-5">
       <h4 id="trnStts"></h4>
       <hr style="background-color: white" />
-      <div class="row">
+      <!-- <div class="row">
         <div class="col-sm-6">
           <h5><span id="cnt1"></span></h5>
         </div>
         <div class="col-sm-6">
           <h5><span id="cnt2"></span></h5>
+        </div>
+      </div> -->
+      <div class="progress">
+        <div
+          class="progress-bar bg-danger progress-bar-striped progress-bar-animated"
+          style="width: 40%"
+          id="p1"
+        >
+          <span id="cnt1" class="txtBg"></span>
+        </div>
+        <div
+          class="progress-bar bg-success progress-bar-striped progress-bar-animated"
+          style="width: 20%"
+          id="p2"
+        >
+          <span id="cnt2" class="txtBg"></span>
         </div>
       </div>
     </div>
