--- a/views/styles.ejs
+++ b/views/styles.ejs
@@ -155,4 +155,18 @@
   .popover {
     max-width: 100%;
   }
+  .progress-bar {
+    display: flex;
+    align-items: center;
+  }
+  .txtBg {
+    width: fit-content;
+    background-color: #000;
+    color: #fff;
+    font-weight: bold;
+    border-radius: 10%;
+    line-height: 1;
+    padding-inline: 5px;
+    padding-block: 2px;
+  }
 </style>
